--- a/index.html
+++ b/index.html
@@ -876,11 +876,11 @@
               <li>
                 <a
                   href="#"
-                  class="flex items-center p-2 text-base font-medium text-gray-900 rounded-lg dark:text-white hover:bg-primary group"
+                  class="flex items-center p-2 text-base font-medium text-gray-900 rounded-lg dark:text-white hover:bg-primary hover:text-white group"
                 >
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
-                    class="w-6 h-6 text-gray-500 transition duration-75 dark:text-gray-400 group-hover:text-gray-900 dark:group-hover:text-white"
+                    class="w-6 h-6 text-gray-500 transition duration-75 dark:text-gray-400 group-hover:text-white dark:group-hover:text-white"
                     viewBox="0 0 24 24"
                   >
                     <g
@@ -902,11 +902,11 @@
               <li>
                 <a
                   href="#"
-                  class="flex items-center p-2 text-base font-medium text-gray-900 rounded-lg transition duration-75 hover:bg-primary dark:text-white group"
+                  class="flex items-center p-2 text-base font-medium text-gray-900 rounded-lg transition duration-75 hover:bg-primary hover:text-white dark:text-white group"
                 >
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
-                    class="w-6 h-6 text-gray-500 transition duration-75 dark:text-gray-400 group-hover:text-gray-900 dark:group-hover:text-white"
+                    class="w-6 h-6 text-gray-500 transition duration-75 dark:text-gray-400 group-hover:text-white dark:group-hover:text-white"
                     viewBox="0 0 32 32"
                   >
                     <path
@@ -930,7 +930,7 @@
                 >
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
-                    class="flex-shrink-0 w-6 h-6 text-gray-500 transition duration-75 dark:text-gray-400 group-hover:text-gray-900 dark:group-hover:text-white"
+                    class="flex-shrink-0 w-6 h-6 text-gray-500 transition duration-75 dark:text-gray-400 group-hover:text-white dark:group-hover:text-white"
                     viewBox="0 0 24 24"
                   >
                     <g
@@ -947,12 +947,12 @@
                       />
                     </g>
                   </svg>
-                  <span class="flex-1 ml-3 text-left whitespace-nowrap"
+                  <span class="flex-1 ml-3 text-left whitespace-nowrap group-hover:text-white"
                     >User Manager</span
                   >
                   <svg
                     aria-hidden="true"
-                    class="w-6 h-6"
+                    class="w-6 h-6 group-hover:text-white"
                     fill="currentColor"
                     viewBox="0 0 20 20"
                     xmlns="http://www.w3.org/2000/svg"
@@ -968,21 +968,21 @@
                   <li>
                     <a
                       href="#"
-                      class="flex items-center p-2 pl-11 w-full text-base font-medium text-gray-900 rounded-lg transition duration-75 group hover:bg-primary dark:text-white"
+                      class="flex items-center p-2 pl-11 w-full text-base font-medium text-gray-900 rounded-lg transition duration-75 group hover:bg-primary dark:text-white hover:text-white"
                       >Settings</a
                     >
                   </li>
                   <li>
                     <a
                       href="#"
-                      class="flex items-center p-2 pl-11 w-full text-base font-medium text-gray-900 rounded-lg transition duration-75 group hover:bg-primary dark:text-white"
+                      class="flex items-center p-2 pl-11 w-full text-base font-medium text-gray-900 rounded-lg transition duration-75 group hover:bg-primary dark:text-white hover:text-white"
                       >Kanban</a
                     >
                   </li>
                   <li>
                     <a
                       href="#"
-                      class="flex items-center p-2 pl-11 w-full text-base font-medium text-gray-900 rounded-lg transition duration-75 group hover:bg-primary dark:text-white"
+                      class="flex items-center p-2 pl-11 w-full text-base font-medium text-gray-900 rounded-lg transition duration-75 group hover:bg-primary dark:text-white hover:text-white"
                       >Calendar</a
                     >
                   </li>
@@ -991,11 +991,11 @@
               <li>
                 <a
                   href="#"
-                  class="flex items-center p-2 text-base font-medium text-gray-900 rounded-lg transition duration-75 hover:bg-primary dark:text-white group"
+                  class="flex items-center p-2 text-base font-medium text-gray-900 rounded-lg transition duration-75 hover:bg-primary hover:text-white dark:text-white group"
                 >
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
-                    class="flex-shrink-0 w-6 h-6 text-gray-500 transition duration-75 dark:text-gray-400 group-hover:text-gray-900 dark:group-hover:text-white"
+                    class="flex-shrink-0 w-6 h-6 text-gray-500 transition duration-75 dark:text-gray-400 group-hover:text-white dark:group-hover:text-white"
                     viewBox="0 0 32 32"
                   >
                     <path
@@ -1009,11 +1009,11 @@
               <li>
                 <a
                   href="#"
-                  class="flex items-center p-2 text-base font-medium text-gray-900 rounded-lg transition duration-75 hover:bg-primary dark:text-white group"
+                  class="flex items-center p-2 text-base font-medium text-gray-900 rounded-lg transition duration-75 hover:bg-primary hover:text-white dark:text-white group"
                 >
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
-                    class="flex-shrink-0 w-6 h-6 text-gray-500 transition duration-75 dark:text-gray-400 group-hover:text-gray-900 dark:group-hover:text-white"
+                    class="flex-shrink-0 w-6 h-6 text-gray-500 transition duration-75 dark:text-gray-400 group-hover:text-white dark:group-hover:text-white"
                     viewBox="0 0 24 24"
                   >
                     <path
@@ -1031,7 +1031,7 @@
                 >
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
-                    class="flex-shrink-0 w-6 h-6 text-gray-500 transition duration-75 dark:text-gray-400 group-hover:text-gray-900 dark:group-hover:text-white"
+                    class="flex-shrink-0 w-6 h-6 text-gray-500 transition duration-75 dark:text-gray-400 group-hover:text-white dark:group-hover:text-white"
                     viewBox="-2 -2.5 24 24"
                   >
                     <path
@@ -1039,9 +1039,9 @@
                       d="M3.656 17.979A1 1 0 0 1 2 17.243V15a2 2 0 0 1-2-2V6a2 2 0 0 1 2-2h11a2 2 0 0 1 2 2v7a2 2 0 0 1-2 2H8.003zm.844-3.093a.536.536 0 0 0 .26-.069l2.355-1.638A1 1 0 0 1 7.686 13H12a1 1 0 0 0 1-1V7a1 1 0 0 0-1-1H3a1 1 0 0 0-1 1v5c0 .54.429.982 1 1c.41.016.707.083.844.226c.128.134.135.36.156.79c.003.063.003.177 0 .37a.5.5 0 0 0 .5.5m11.5-4.87a7.136 7.136 0 0 0 0 .37zc.02-.43.028-.656.156-.79c.137-.143.434-.21.844-.226c.571-.018 1-.46 1-1V3a1 1 0 0 0-1-1H8a1 1 0 0 0-1 1H5V2a2 2 0 0 1 2-2h11a2 2 0 0 1 2 2v7a2 2 0 0 1-2 2v2.243a1 1 0 0 1-1.656.736L16 13.743z"
                     />
                   </svg>
-                  <span class="flex-1 ml-3 whitespace-nowrap">Messages</span>
+                  <span class="flex-1 ml-3 whitespace-nowrap group-hover:text-white">Messages</span>
                   <span
-                    class="inline-flex justify-center items-center w-5 h-5 text-xs font-semibold rounded-full text-primary-800 bg-primary-100 dark:bg-primary-200 dark:text-primary-800"
+                    class="inline-flex justify-center items-center w-5 h-5 text-xs font-semibold rounded-full text-primary-800 bg-primary-100 dark:bg-primary-200 dark:text-primary-800 group-hover:text-white"
                   >
                     4
                   </span>
@@ -1050,11 +1050,11 @@
               <li>
                 <a
                   href="#"
-                  class="flex items-center p-2 text-base font-medium text-gray-900 rounded-lg transition duration-75 hover:bg-primary dark:text-white group"
+                  class="flex items-center p-2 text-base font-medium text-gray-900 rounded-lg transition duration-75 hover:bg-primary hover:text-white dark:text-white group"
                 >
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
-                    class="flex-shrink-0 w-6 h-6 text-gray-500 transition duration-75 dark:text-gray-400 group-hover:text-gray-900 dark:group-hover:text-white"
+                    class="flex-shrink-0 w-6 h-6 text-gray-500 transition duration-75 dark:text-gray-400 group-hover:text-white dark:group-hover:text-white"
                     viewBox="0 0 24 24"
                   >
                     <path
@@ -1068,11 +1068,11 @@
               <li>
                 <a
                   href="#"
-                  class="flex items-center p-2 text-base font-medium text-gray-900 rounded-lg transition duration-75 hover:bg-primary dark:text-white group"
+                  class="flex items-center p-2 text-base font-medium text-gray-900 rounded-lg transition duration-75 hover:bg-primary hover:text-white dark:text-white group"
                 >
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
-                    class="flex-shrink-0 w-6 h-6 text-gray-500 transition duration-75 dark:text-gray-400 group-hover:text-gray-900 dark:group-hover:text-white"
+                    class="flex-shrink-0 w-6 h-6 text-gray-500 transition duration-75 dark:text-gray-400 group-hover:text-white dark:group-hover:text-white"
                     viewBox="0 0 24 24"
                   >
                     <path
@@ -1086,11 +1086,11 @@
               <li>
                 <a
                   href="#"
-                  class="flex items-center p-2 text-base font-medium text-gray-900 rounded-lg transition duration-75 hover:bg-primary dark:text-white group"
+                  class="flex items-center p-2 text-base font-medium text-gray-900 rounded-lg transition duration-75 hover:bg-primary hover:text-white dark:text-white group"
                 >
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
-                    class="flex-shrink-0 w-6 h-6 text-gray-500 transition duration-75 dark:text-gray-400 group-hover:text-gray-900 dark:group-hover:text-white"
+                    class="flex-shrink-0 w-6 h-6 text-gray-500 transition duration-75 dark:text-gray-400 group-hover:text-white dark:group-hover:text-white"
                     viewBox="0 0 512 512"
                   >
                     <path
@@ -1165,11 +1165,11 @@
               <li>
                 <a
                   href="#"
-                  class="flex items-center p-2 text-base font-medium text-gray-900 rounded-lg transition duration-75 hover:bg-primary dark:text-white group"
+                  class="flex items-center p-2 text-base font-medium text-gray-900 rounded-lg transition duration-75 hover:bg-primary hover:text-white dark:text-white group"
                 >
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
-                    class="flex-shrink-0 w-6 h-6 text-gray-500 transition duration-75 dark:text-gray-400 group-hover:text-gray-900 dark:group-hover:text-white"
+                    class="flex-shrink-0 w-6 h-6 text-gray-500 transition duration-75 dark:text-gray-400 group-hover:text-white dark:group-hover:text-white"
                     viewBox="0 0 256 256"
                   >
                     <path
@@ -1189,7 +1189,7 @@
                 >
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
-                    class="flex-shrink-0 w-6 h-6 text-gray-500 transition duration-75 dark:text-gray-400 group-hover:text-gray-900 dark:group-hover:text-white"
+                    class="flex-shrink-0 w-6 h-6 text-gray-500 transition duration-75 dark:text-gray-400 group-hover:text-white dark:group-hover:text-white"
                     viewBox="0 0 24 24"
                   >
                     <g
@@ -1203,12 +1203,12 @@
                       <path d="M13.5 10.5H21A7.5 7.5 0 0 0 13.5 3z" />
                     </g>
                   </svg>
-                  <span class="flex-1 ml-3 text-left whitespace-nowrap"
+                  <span class="flex-1 ml-3 text-left whitespace-nowrap group-hover:text-white"
                     >Highest Top-Up</span
                   >
                   <svg
                     aria-hidden="true"
-                    class="w-6 h-6"
+                    class="w-6 h-6 group-hover:text-white"
                     fill="currentColor"
                     viewBox="0 0 20 20"
                     xmlns="http://www.w3.org/2000/svg"
@@ -1224,21 +1224,21 @@
                   <li>
                     <a
                       href="#"
-                      class="flex items-center p-2 pl-11 w-full text-base font-medium text-gray-900 rounded-lg transition duration-75 group hover:bg-primary dark:text-white"
+                      class="flex items-center p-2 pl-11 w-full text-base font-medium text-gray-900 rounded-lg transition duration-75 group hover:bg-primary dark:text-white hover:text-white"
                       >Sign In</a
                     >
                   </li>
                   <li>
                     <a
                       href="#"
-                      class="flex items-center p-2 pl-11 w-full text-base font-medium text-gray-900 rounded-lg transition duration-75 group hover:bg-primary dark:text-white"
+                      class="flex items-center p-2 pl-11 w-full text-base font-medium text-gray-900 rounded-lg transition duration-75 group hover:bg-primary dark:text-white hover:text-white"
                       >Sign Up</a
                     >
                   </li>
                   <li>
                     <a
                       href="#"
-                      class="flex items-center p-2 pl-11 w-full text-base font-medium text-gray-900 rounded-lg transition duration-75 group hover:bg-primary dark:text-white"
+                      class="flex items-center p-2 pl-11 w-full text-base font-medium text-gray-900 rounded-lg transition duration-75 group hover:bg-primary dark:text-white hover:text-white"
                       >Forgot Password</a
                     >
                   </li>
@@ -1247,11 +1247,11 @@
               <li>
                 <a
                   href="#"
-                  class="flex items-center p-2 text-base font-medium text-gray-900 rounded-lg transition duration-75 hover:bg-primary dark:text-white group"
+                  class="flex items-center p-2 text-base font-medium text-gray-900 rounded-lg transition duration-75 hover:bg-primary hover:text-white dark:text-white group"
                 >
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
-                    class="flex-shrink-0 w-6 h-6 text-gray-500 transition duration-75 dark:text-gray-400 group-hover:text-gray-900 dark:group-hover:text-white"
+                    class="flex-shrink-0 w-6 h-6 text-gray-500 transition duration-75 dark:text-gray-400 group-hover:text-white dark:group-hover:text-white"
                     viewBox="0 0 24 24"
                   >
                     <g fill="none" fill-rule="evenodd">
@@ -1276,7 +1276,7 @@
                 >
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
-                    class="flex-shrink-0 w-6 h-6 text-gray-500 transition duration-75 dark:text-gray-400 group-hover:text-gray-900 dark:group-hover:text-white"
+                    class="flex-shrink-0 w-6 h-6 text-gray-500 transition duration-75 dark:text-gray-400 group-hover:text-white dark:group-hover:text-white"
                     viewBox="0 0 256 256"
                   >
                     <path
@@ -1284,12 +1284,12 @@
                       d="M220.69 100.17a12 12 0 0 0-9.85 13.83a85 85 0 0 1 1.16 14a83.57 83.57 0 0 1-18 51.94a83.5 83.5 0 0 0-29-23.42a52 52 0 1 0-74 0a83.5 83.5 0 0 0-29 23.42A83.94 83.94 0 0 1 128 44a85 85 0 0 1 14 1.16a12 12 0 0 0 4-23.67A108.1 108.1 0 0 0 20 128a108 108 0 0 0 216 0a109 109 0 0 0-1.49-18a12 12 0 0 0-13.82-9.83M100 120a28 28 0 1 1 28 28a28 28 0 0 1-28-28m-20.43 76.57a60 60 0 0 1 96.86 0a83.72 83.72 0 0 1-96.86 0M240.49 48.49l-32 32a12 12 0 0 1-17 0l-16-16a12 12 0 0 1 17-17L200 55l23.51-23.52a12 12 0 1 1 17 17Z"
                     />
                   </svg>
-                  <span class="flex-1 ml-3 text-left whitespace-nowrap"
+                  <span class="flex-1 ml-3 text-left whitespace-nowrap group-hover:text-white"
                     >Agent Model</span
                   >
                   <svg
                     aria-hidden="true"
-                    class="w-6 h-6"
+                    class="w-6 h-6 group-hover:text-white"
                     fill="currentColor"
                     viewBox="0 0 20 20"
                     xmlns="http://www.w3.org/2000/svg"
@@ -1305,21 +1305,21 @@
                   <li>
                     <a
                       href="#"
-                      class="flex items-center p-2 pl-11 w-full text-base font-medium text-gray-900 rounded-lg transition duration-75 group hover:bg-primary dark:text-white"
+                      class="flex items-center p-2 pl-11 w-full text-base font-medium text-gray-900 rounded-lg transition duration-75 group hover:bg-primary dark:text-white hover:text-white"
                       >Sign In</a
                     >
                   </li>
                   <li>
                     <a
                       href="#"
-                      class="flex items-center p-2 pl-11 w-full text-base font-medium text-gray-900 rounded-lg transition duration-75 group hover:bg-primary dark:text-white"
+                      class="flex items-center p-2 pl-11 w-full text-base font-medium text-gray-900 rounded-lg transition duration-75 group hover:bg-primary dark:text-white hover:text-white"
                       >Sign Up</a
                     >
                   </li>
                   <li>
                     <a
                       href="#"
-                      class="flex items-center p-2 pl-11 w-full text-base font-medium text-gray-900 rounded-lg transition duration-75 group hover:bg-primary dark:text-white"
+                      class="flex items-center p-2 pl-11 w-full text-base font-medium text-gray-900 rounded-lg transition duration-75 group hover:bg-primary dark:text-white hover:text-white"
                       >Forgot Password</a
                     >
                   </li>
