--- a/index.html
+++ b/index.html
@@ -947,7 +947,8 @@
                       />
                     </g>
                   </svg>
-                  <span class="flex-1 ml-3 text-left whitespace-nowrap group-hover:text-white"
+                  <span
+                    class="flex-1 ml-3 text-left whitespace-nowrap group-hover:text-white"
                     >User Manager</span
                   >
                   <svg
@@ -1039,7 +1040,10 @@
                       d="M3.656 17.979A1 1 0 0 1 2 17.243V15a2 2 0 0 1-2-2V6a2 2 0 0 1 2-2h11a2 2 0 0 1 2 2v7a2 2 0 0 1-2 2H8.003zm.844-3.093a.536.536 0 0 0 .26-.069l2.355-1.638A1 1 0 0 1 7.686 13H12a1 1 0 0 0 1-1V7a1 1 0 0 0-1-1H3a1 1 0 0 0-1 1v5c0 .54.429.982 1 1c.41.016.707.083.844.226c.128.134.135.36.156.79c.003.063.003.177 0 .37a.5.5 0 0 0 .5.5m11.5-4.87a7.136 7.136 0 0 0 0 .37zc.02-.43.028-.656.156-.79c.137-.143.434-.21.844-.226c.571-.018 1-.46 1-1V3a1 1 0 0 0-1-1H8a1 1 0 0 0-1 1H5V2a2 2 0 0 1 2-2h11a2 2 0 0 1 2 2v7a2 2 0 0 1-2 2v2.243a1 1 0 0 1-1.656.736L16 13.743z"
                     />
                   </svg>
-                  <span class="flex-1 ml-3 whitespace-nowrap group-hover:text-white">Messages</span>
+                  <span
+                    class="flex-1 ml-3 whitespace-nowrap group-hover:text-white"
+                    >Messages</span
+                  >
                   <span
                     class="inline-flex justify-center items-center w-5 h-5 text-xs font-semibold rounded-full text-primary-800 bg-primary-100 dark:bg-primary-200 dark:text-primary-800 group-hover:text-white"
                   >
@@ -1203,7 +1207,8 @@
                       <path d="M13.5 10.5H21A7.5 7.5 0 0 0 13.5 3z" />
                     </g>
                   </svg>
-                  <span class="flex-1 ml-3 text-left whitespace-nowrap group-hover:text-white"
+                  <span
+                    class="flex-1 ml-3 text-left whitespace-nowrap group-hover:text-white"
                     >Highest Top-Up</span
                   >
                   <svg
@@ -1284,7 +1289,8 @@
                       d="M220.69 100.17a12 12 0 0 0-9.85 13.83a85 85 0 0 1 1.16 14a83.57 83.57 0 0 1-18 51.94a83.5 83.5 0 0 0-29-23.42a52 52 0 1 0-74 0a83.5 83.5 0 0 0-29 23.42A83.94 83.94 0 0 1 128 44a85 85 0 0 1 14 1.16a12 12 0 0 0 4-23.67A108.1 108.1 0 0 0 20 128a108 108 0 0 0 216 0a109 109 0 0 0-1.49-18a12 12 0 0 0-13.82-9.83M100 120a28 28 0 1 1 28 28a28 28 0 0 1-28-28m-20.43 76.57a60 60 0 0 1 96.86 0a83.72 83.72 0 0 1-96.86 0M240.49 48.49l-32 32a12 12 0 0 1-17 0l-16-16a12 12 0 0 1 17-17L200 55l23.51-23.52a12 12 0 1 1 17 17Z"
                     />
                   </svg>
-                  <span class="flex-1 ml-3 text-left whitespace-nowrap group-hover:text-white"
+                  <span
+                    class="flex-1 ml-3 text-left whitespace-nowrap group-hover:text-white"
                     >Agent Model</span
                   >
                   <svg
@@ -1328,6 +1334,19 @@
             </ul>
           </div>
         </aside>
+
+        <!-- Analytics Page -->
+        <main class="p-4 md:ml-64 h-auto pt-20">
+          <div
+            class="flex flex-col bg-gray-50 dark:bg-dark100 rounded-lg min-h-screen"
+          >
+            <h1
+              class="text-xl lg:text-3xl font-medium text-primary tracking-tight mb-10"
+            >
+              Analytics
+            </h1>
+          </div>
+        </main>
 
         <!-- Top Games Page -->
         <main class="p-4 md:ml-64 h-auto pt-20">
@@ -1464,8 +1483,12 @@
                       <th scope="col" class="px-6 py-3 text-primary">
                         Date & Time
                       </th>
-                      <th scope="col" class="px-6 py-3 text-primary">Success Count</th>
-                      <th scope="col" class="px-6 py-3 text-primary">Fail Count</th>
+                      <th scope="col" class="px-6 py-3 text-primary">
+                        Success Count
+                      </th>
+                      <th scope="col" class="px-6 py-3 text-primary">
+                        Fail Count
+                      </th>
                     </tr>
                   </thead>
                   <tbody id="tbodyUnReg"></tbody>
@@ -1605,7 +1628,7 @@
                   >
                   <select
                     id="countries"
-                    class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+                    class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary focus:border-primary block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
                   >
                     <option>Select Mode</option>
                     <option value="US">Dark Mode</option>
@@ -1613,7 +1636,10 @@
                   </select>
                 </form>
 
-                <a href="" class="hover:bg-gray-100 dark:hover:bg-gray-500 rounded-lg p-2">
+                <a
+                  href=""
+                  class="hover:bg-gray-100 dark:hover:bg-gray-500 rounded-lg p-2"
+                >
                   <label
                     for="countries"
                     class="block mb-2 text-sm font-medium text-gray-500 dark:text-gray-100"
@@ -1644,7 +1670,10 @@
                   </div>
                 </a>
 
-                <a href="" class="hover:bg-gray-100 dark:hover:bg-gray-500 rounded-lg p-2">
+                <a
+                  href=""
+                  class="hover:bg-gray-100 dark:hover:bg-gray-500 rounded-lg p-2"
+                >
                   <label
                     for="countries"
                     class="block mb-2 text-sm font-medium text-gray-500 dark:text-gray-100"
@@ -1801,12 +1830,13 @@
               </form>
 
               <div class="flex items-center gap-3">
-                <span class="text-gray-500 dark:text-gray-400"
-                  >Total number of Agent: 250</span
-                >
+                <p class="text-gray-500 dark:text-gray-400">
+                  Total number of Agent:
+                  <span class="text-gray-900 font-medium">250</span>
+                </p>
                 <button
                   type="button"
-                  class="text-gray-900 bg-white border border-gray-300 focus:outline-none hover:bg-gray-100 focus:ring-2 focus:ring-gray-100 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 dark:bg-gray-800 dark:text-white dark:border-gray-600 dark:hover:bg-gray-700 dark:hover:border-gray-600 dark:focus:ring-gray-700"
+                  class="text-gray-900 bg-white border border-gray-300 focus:outline-none hover:bg-gray-100 focus:ring-2 focus:ring-gray-100 font-medium rounded-lg text-sm px-5 py-2.5 me-2 dark:bg-gray-800 dark:text-white dark:border-gray-600 dark:hover:bg-gray-700 dark:hover:border-gray-600 dark:focus:ring-gray-700"
                 >
                   Check
                 </button>
@@ -4201,7 +4231,7 @@
                         <input
                           type="checkbox"
                           value=""
-                          class="w-4 h-4 border-primary rounded bg-gray-50 checked:bg-primary"
+                          class="w-4 h-4 border-primary rounded bg-gray-50 checked:bg-primary dark:checked:bg-primary"
                         />
                         <label
                           for="default-checkbox"
@@ -4213,7 +4243,7 @@
                         <input
                           type="checkbox"
                           value=""
-                          class="w-4 h-4 border-primary rounded bg-gray-50 checked:bg-primary"
+                          class="w-4 h-4 border-primary rounded bg-gray-50 checked:bg-primary dark:checked:bg-primary"
                         />
                         <label
                           for="default-checkbox"
@@ -4225,7 +4255,7 @@
                         <input
                           type="checkbox"
                           value=""
-                          class="w-4 h-4 border-primary rounded bg-gray-50 checked:bg-primary"
+                          class="w-4 h-4 border-primary rounded bg-gray-50 checked:bg-primary dark:checked:bg-primary"
                         />
                         <label
                           for="default-checkbox"
@@ -4237,7 +4267,7 @@
                         <input
                           type="checkbox"
                           value=""
-                          class="w-4 h-4 border-primary rounded bg-gray-50 checked:bg-primary"
+                          class="w-4 h-4 border-primary rounded bg-gray-50 checked:bg-primary dark:checked:bg-primary"
                         />
                         <label
                           for="default-checkbox"
@@ -4249,7 +4279,7 @@
                         <input
                           type="checkbox"
                           value=""
-                          class="w-4 h-4 border-primary rounded bg-gray-50 checked:bg-primary"
+                          class="w-4 h-4 border-primary rounded bg-gray-50 checked:bg-primary dark:checked:bg-primary"
                         />
                         <label
                           for="default-checkbox"
@@ -4261,7 +4291,7 @@
                         <input
                           type="checkbox"
                           value=""
-                          class="w-4 h-4 border-primary rounded bg-gray-50 checked:bg-primary"
+                          class="w-4 h-4 border-primary rounded bg-gray-50 checked:bg-primary dark:checked:bg-primary"
                         />
                         <label
                           for="default-checkbox"
@@ -5819,194 +5849,6 @@
               </div>
             </form>
           </div>
-        </main>
-
-        <!-- Analytics  -->
-        <main class="p-4 md:ml-64 min-h-screen pt-20">
-          <div
-            class="max-w-lg w-full bg-white rounded-lg shadow dark:bg-dark200 p-4 md:p-6"
-          >
-            <div
-              class="flex justify-between border-gray-200 border-b dark:border-dark100 pb-3"
-            >
-              <dl>
-                <dt
-                  class="text-base font-normal text-gray-500 dark:text-gray-400 pb-1"
-                >
-                  Profit
-                </dt>
-                <dd
-                  class="leading-none text-3xl font-bold text-gray-900 dark:text-white"
-                >
-                  $5,405
-                </dd>
-              </dl>
-              <div>
-                <span
-                  class="bg-green-100 text-green-800 text-xs font-medium inline-flex items-center px-2.5 py-1 rounded-md dark:bg-green-900 dark:text-green-300"
-                >
-                  <svg
-                    class="w-2.5 h-2.5 me-1.5"
-                    aria-hidden="true"
-                    xmlns="http://www.w3.org/2000/svg"
-                    fill="none"
-                    viewBox="0 0 10 14"
-                  >
-                    <path
-                      stroke="currentColor"
-                      stroke-linecap="round"
-                      stroke-linejoin="round"
-                      stroke-width="2"
-                      d="M5 13V1m0 0L1 5m4-4 4 4"
-                    />
-                  </svg>
-                  Profit rate 23.5%
-                </span>
-              </div>
-            </div>
-
-            <div class="grid grid-cols-2 py-3">
-              <dl>
-                <dt
-                  class="text-base font-normal text-gray-500 dark:text-gray-400 pb-1"
-                >
-                  Income
-                </dt>
-                <dd
-                  class="leading-none text-xl font-bold text-green-500 dark:text-green-400"
-                >
-                  $23,635
-                </dd>
-              </dl>
-              <dl>
-                <dt
-                  class="text-base font-normal text-gray-500 dark:text-gray-400 pb-1"
-                >
-                  Expense
-                </dt>
-                <dd
-                  class="leading-none text-xl font-bold text-red-600 dark:text-red-500"
-                >
-                  -$18,230
-                </dd>
-              </dl>
-            </div>
-
-            <div id="bar-chart"></div>
-            <div
-              class="grid grid-cols-1 items-center border-gray-200 border-t dark:border-dark100 justify-between"
-            >
-              <div class="flex justify-between items-center pt-5">
-                <!-- Button -->
-                <button
-                  id="dropdownDefaultButton"
-                  data-dropdown-toggle="lastDaysdropdown"
-                  data-dropdown-placement="bottom"
-                  class="text-sm font-medium text-gray-900 dark:text-white hover:text-gray-900 text-center inline-flex items-center dark:hover:text-white"
-                  type="button"
-                >
-                  Last 6 months
-                  <svg
-                    class="w-2.5 m-2.5 ms-1.5"
-                    aria-hidden="true"
-                    xmlns="http://www.w3.org/2000/svg"
-                    fill="none"
-                    viewBox="0 0 10 6"
-                  >
-                    <path
-                      stroke="currentColor"
-                      stroke-linecap="round"
-                      stroke-linejoin="round"
-                      stroke-width="2"
-                      d="m1 1 4 4 4-4"
-                    />
-                  </svg>
-                </button>
-                <!-- Dropdown menu -->
-                <div
-                  id="lastDaysdropdown"
-                  class="z-10 hidden bg-white divide-y divide-gray-100 rounded-lg shadow w-44 dark:bg-dark300"
-                >
-                  <ul
-                    class="py-2 text-sm text-gray-700 dark:text-gray-200"
-                    aria-labelledby="dropdownDefaultButton"
-                  >
-                    <li>
-                      <a
-                        href="#"
-                        class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-dark500 dark:hover:text-white"
-                        >Yesterday</a
-                      >
-                    </li>
-                    <li>
-                      <a
-                        href="#"
-                        class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-dark500 dark:hover:text-white"
-                        >Today</a
-                      >
-                    </li>
-                    <li>
-                      <a
-                        href="#"
-                        class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-dark500 dark:hover:text-white"
-                        >Last 7 days</a
-                      >
-                    </li>
-                    <li>
-                      <a
-                        href="#"
-                        class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-dark500 dark:hover:text-white"
-                        >Last 30 days</a
-                      >
-                    </li>
-                    <li>
-                      <a
-                        href="#"
-                        class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-dark500 dark:hover:text-white"
-                        >Last 90 days</a
-                      >
-                    </li>
-                    <li>
-                      <a
-                        href="#"
-                        class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-dark500 dark:hover:text-white"
-                        >Last 6 months</a
-                      >
-                    </li>
-                    <li>
-                      <a
-                        href="#"
-                        class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-dark500 dark:hover:text-white"
-                        >Last year</a
-                      >
-                    </li>
-                  </ul>
-                </div>
-                <a
-                  href="#"
-                  class="uppercase text-sm font-semibold inline-flex items-center rounded-lg text-blue-600 hover:text-blue-700 dark:hover:text-blue-500 hover:bg-gray-100 dark:hover:bg-gray-700 dark:focus:ring-gray-700 dark:border-dark100 px-3 py-2"
-                >
-                  Revenue Report
-                  <svg
-                    class="w-2.5 h-2.5 ms-1.5 rtl:rotate-180"
-                    aria-hidden="true"
-                    xmlns="http://www.w3.org/2000/svg"
-                    fill="none"
-                    viewBox="0 0 6 10"
-                  >
-                    <path
-                      stroke="currentColor"
-                      stroke-linecap="round"
-                      stroke-linejoin="round"
-                      stroke-width="2"
-                      d="m1 9 4-4-4-4"
-                    />
-                  </svg>
-                </a>
-              </div>
-            </div>
-          </div>
-          <div id="container" style="width: 100%; height: 400px"></div>
         </main>
 
         <!-- Recharge Log -->
